# bea_client

./: Cargo.toml  README.md
src/: bea_service.rs  lib.rs
src/wsdl/: beAServiceV5.wsdl  dto1.xsd  dto2.xsd  dto3.xsd  dto4.xsd  dto5.xsd  types5.xsd
