[package]
name = "bea_client"
version = "0.1.0"
authors = ["Marcel Wagner <wagnerma@smarwag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 yaserde = "0.6.0"
 yaserde_derive = "0.6.0"
 xml-rs = "0.8.3"
 log = "0.4"
 log4rs = "1.0.0"
 async-trait = "0.1.45"
 reqwest = { version = "0.11.1", features =["blocking"]}
 tokio = { version = "1.2.0", features = ["full"] }
